--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
+        <li><a href="https://marilena13.github.io/About-me/">About Me</a></li>
         <li><a href="use_case.html">Use Cases</a></li>
         <li><a href="template.html">Templates</a></li>
       </ul>
@@ -25,9 +26,10 @@
   <div class="container hero-content">
     <h2>Bridging Business,Technology & People</h2>
     <p>
-      Hi! I'm Marilena, an IT Business Analyst with experience in in Finance and Automotive. 
-      I help teams transform complex requirements into functional solutions, aligning business goals, technology, and people
+      Hi! I’m Marilena Agostino, Business Analyst in Finance & Automotive. I help teams define clear requirements, optimize processes and deliver technology solutions that drive measurable value.
     </p>
+    <p class="subtitle">From ambiguity to clarity. <br>
+      From stakeholder expectations to delivered value.</p>
     <a href="use_case.html" class="btn-primary">Explore Use Cases</a>
   </div>
 </section>
