--- a/template.html
+++ b/template.html
@@ -16,6 +16,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="https://marilena13.github.io/About-me/">About Me</a></li>
           <li><a href="use_case.html">Use Cases</a></li>
           <li><a href="template.html" class="active">Templates</a></li>
         </ul>
