--- a/use_case.html
+++ b/use_case.html
@@ -17,6 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="https://marilena13.github.io/About-me/">About Me</a></li>
           <li><a href="use_case.html" class="active">Use Cases</a></li>
           <li><a href="template.html">Templates</a></li>
         </ul>
@@ -38,125 +39,13 @@
       <div class="container">
 
         <!-- Use Case 1 -->
-<div class="usecase-card">
+         <div class="usecase-card">
   <div class="usecase-header">
-    <h3>Open Insurance Process Reengineering</h3>
+    <h3>Open Insurance Transformation </h3>
     <div class="tags">
       <span>BPMN</span>
       <span>UML</span>
-      <span>Process Optimization</span>
-    </div>
-  </div>
-
-  <div class="usecase-grid">
-    <div class="usecase-content">
-      <div class="block">
-        <h4>Problem</h4>
-        <p>Inefficient legacy processes in insurance management causing delays and inconsistencies in policy handling.</p>
-      </div>
-      <div class="block">
-        <h4>Approach</h4>
-        <p>Analysis of as-is processes, stakeholder interviews, and feasibility assessment for process automation and digital integration.</p>
-      </div>
-      <div class="block">
-        <h4>Solution</h4>
-        <p>Redesign of core processes with BPMN and UML modeling, creation of optimized workflows, and alignment with strategic business goals.</p>
-      </div>
-    </div>
-
-    <div class="impact-box">
-      <h4>Impact</h4>
-      <ul>
-        <li>-20% process completion time</li>
-        <li>Improved customer satisfaction</li>
-        <li>Aligned processes with corporate strategy</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<!-- Use Case 2 -->
-<div class="usecase-card">
-  <div class="usecase-header">
-    <h3>Digital Payments and Card Management</h3>
-    <div class="tags">
-      <span>Agile</span>
-      <span>SharePoint</span>
-      <span>Project Coordination</span>
-    </div>
-  </div>
-
-  <div class="usecase-grid">
-    <div class="usecase-content">
-      <div class="block">
-        <h4>Problem</h4>
-        <p>Manual tracking of digital payments and virtual card transactions causing operational inefficiencies and delays.</p>
-      </div>
-      <div class="block">
-        <h4>Approach</h4>
-        <p>Collection and prioritization of requirements, analysis of functional gaps, and coordination of cross-functional teams using SharePoint and Agile methods.</p>
-      </div>
-      <div class="block">
-        <h4>Solution</h4>
-        <p>Implementation of automated monitoring workflows, standardization of reporting, and functional validation of payment systems and digital card platforms.</p>
-      </div>
-    </div>
-
-    <div class="impact-box">
-      <h4>Impact</h4>
-      <ul>
-        <li>Enhanced operational efficiency</li>
-        <li>Reduced errors in transaction processing</li>
-        <li>Clearer cross-team communication and accountability</li>
-      </ul>
-    </div>
-  </div>
-</div>
-
-<!-- Use Case 3 -->
-<div class="usecase-card">
-  <div class="usecase-header">
-    <h3>Automotive B2B Tracking System</h3>
-    <div class="tags">
-      <span>Agile</span>
-      <span>Figma</span>
-      <span>Mobile App</span>
-    </div>
-  </div>
-
-  <div class="usecase-grid">
-    <div class="usecase-content">
-      <div class="block">
-        <h4>Problem</h4>
-        <p>Lack of visibility on vehicle and goods tracking for B2B clients, causing inefficiencies in logistics and customer support.</p>
-      </div>
-      <div class="block">
-        <h4>Approach</h4>
-        <p>Elicitation of functional requirements, prototyping in Figma, and iterative validation with stakeholders and mobile development teams.</p>
-      </div>
-      <div class="block">
-        <h4>Solution</h4>
-        <p>Development of a mobile tracking application with navigable prototypes, improved UX/UI, and integration with existing B2B systems for real-time monitoring.</p>
-      </div>
-    </div>
-
-    <div class="impact-box">
-      <h4>Impact</h4>
-      <ul>
-        <li>Real-time visibility on shipments</li>
-        <li>Improved client experience</li>
-        <li>Reduction in manual tracking errors</li>
-      </ul>
-    </div>
-  </div>
-</div>
-<!-- Use Case 4 -->
-<div class="usecase-card">
-  <div class="usecase-header">
-    <h3>Mortgage & Loan Process Assessment</h3>
-    <div class="tags">
-      <span>UML</span>
-      <span>Waterfall</span>
+      <span>Requirements Engineering</span>
       <span>Process Reengineering</span>
     </div>
   </div>
@@ -164,180 +53,224 @@
   <div class="usecase-grid">
     <div class="usecase-content">
       <div class="block">
-        <h4>Problem</h4>
-        <p>Manual workflows for mortgage and loan approvals causing delays and inefficiencies in credit operations.</p>
+        <h4>Context</h4>
+        <p>Open Insurance initiatives and core system evolutions within a regulated insurance environment requiring alignment between business strategy and IT feasibility.</p>
       </div>
       <div class="block">
-        <h4>Approach</h4>
-        <p>Interviews with stakeholders, as-is process documentation, gap analysis, and identification of automation opportunities.</p>
+        <h4>My Role</h4>
+        <p>Business Analyst responsible for business requirement definition, process modeling, feasibility studies and stakeholder alignment across Marketing, IT and Project Management.</p>
       </div>
       <div class="block">
-        <h4>Solution</h4>
-        <p>Redesign of credit and mortgage processes, creation of solution proposals for legacy tool replacement, and detailed process modeling in UML.</p>
+        <h4>Contribution</h4>
+        <p>Led as-is and to-be process modeling (BPMN/UML), structured requirement documentation, supported post-go-live adoption and ensured strategic alignment with corporate objectives.</p>
       </div>
     </div>
 
     <div class="impact-box">
       <h4>Impact</h4>
       <ul>
-        <li>Streamlined loan approval workflows</li>
-        <li>Reduced manual errors</li>
-        <li>Foundation for digitalization of mortgage processes</li>
+        <li>Improved operational workflow clarity</li>
+        <li>Reduced requirement ambiguity across teams</li>
+        <li>Strengthened governance in digital insurance initiatives</li>
       </ul>
     </div>
   </div>
 </div>
 
-<!-- Use Case 5 -->
-<div class="usecase-card">
+        <!-- Use Case 2 -->
+  <div class="usecase-card">
   <div class="usecase-header">
-    <h3>B2B Financial Platform Maintenance</h3>
+    <h3>Mortgage & Credit Process Reengineering </h3>
     <div class="tags">
-      <span>Azure Board</span>
-      <span>Agile</span>
-      <span>Project Coordination</span>
+      <span>UML</span>
+      <span>Waterfall</span>
+      <span>Gap Analysis</span>
+      <span>Digitalization</span>
     </div>
   </div>
 
   <div class="usecase-grid">
     <div class="usecase-content">
       <div class="block">
-        <h4>Problem</h4>
-        <p>Complex B2B financial platform requiring constant updates, with risks of delayed releases and unaligned teams.</p>
+        <h4>Context</h4>
+        <p>Assessment of manual mortgage, leasing and credit workflows with high operational dependency on legacy systems.</p>
       </div>
       <div class="block">
-        <h4>Approach</h4>
-        <p>Prioritization of requirements, planning and tracking tasks in Azure Board, coordination of cross-functional development teams.</p>
+        <h4>My Role</h4>
+        <p>Conducted stakeholder interviews and as-is documentation, analyzed data flows and system interactions, and identified automation opportunities.</p>
       </div>
       <div class="block">
-        <h4>Solution</h4>
-        <p>Implementation of structured workflows for maintenance and release management, ensuring timely delivery and functional alignment.</p>
+        <h4>Contribution</h4>
+        <p>Defined structured solution proposals for process reengineering and legacy tool replacement, supporting the roadmap toward credit digitalization.</p>
       </div>
     </div>
 
     <div class="impact-box">
       <h4>Impact</h4>
       <ul>
-        <li>Improved release predictability</li>
-        <li>Better team alignment and visibility</li>
-        <li>Reduced backlog and rework</li>
+        <li>Identified operational inefficiencies in credit lifecycle</li>
+        <li>Enabled digital transformation roadmap definition</li>
+        <li>Reduced dependency on manual processing flows</li>
       </ul>
     </div>
   </div>
 </div>
 
-<!-- Use Case 6 -->
+        <!-- Use Case 3 -->
 <div class="usecase-card">
   <div class="usecase-header">
-    <h3>Mobile B2C Application Development</h3>
+    <h3>Digital Payments & Virtual Cards </h3>
+    <div class="tags">
+      <span>Payments</span>
+      <span>PMO</span>
+      <span>SharePoint Governance</span>
+      <span>Milestone Planning</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Context</h4>
+        <p>Maintenance and evolutive initiatives on digital payments, virtual cards and customer profile systems in a large banking environment.</p>
+      </div>
+      <div class="block">
+        <h4>My Role</h4>
+        <p>Managed requirement prioritization, functional validation and milestone tracking while coordinating multiple cross-functional teams.</p>
+      </div>
+      <div class="block">
+        <h4>Contribution</h4>
+        <p>Improved project governance through structured reporting, backlog organization and interface agreement validation between stakeholders.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Improved delivery predictability</li>
+        <li>Enhanced cross-team alignment</li>
+        <li>Strengthened governance over digital payment streams</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+        <!-- Use Case 4 -->
+  <div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Financial Markets B2B Platform </h3>
+    <div class="tags">
+      <span>Agile</span>
+      <span>Azure Boards</span>
+      <span>Stakeholder Management</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Context</h4>
+        <p>Development and governance of a B2B financial platform supporting structured market proposals.</p>
+      </div>
+      <div class="block">
+        <h4>My Role</h4>
+        <p>Facilitated requirement elicitation sessions, prioritized backlog items and coordinated mobile and backend development streams.</p>
+      </div>
+      <div class="block">
+        <h4>Contribution</h4>
+        <p>Supported release planning, validated interface agreements and ensured alignment between business expectations and technical feasibility.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Improved cross-functional collaboration</li>
+        <li>Reduced backlog fragmentation</li>
+        <li>Enhanced visibility on delivery milestones</li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+        <!-- Use Case 5-->
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>Automotive B2B Tracking System</h3>
+    <div class="tags">
+      <span>Automotive</span>
+      <span>Prototyping</span>
+      <span>Mobile</span>
+      <span>Go-Live Management</span>
+    </div>
+  </div>
+
+  <div class="usecase-grid">
+    <div class="usecase-content">
+      <div class="block">
+        <h4>Context</h4>
+        <p>Development of a B2B tracking application for vehicle and goods monitoring in an automotive environment.</p>
+      </div>
+      <div class="block">
+        <h4>My Role</h4>
+        <p>Managed requirement definition, functional documentation and stakeholder validation, supporting go-live and release management.</p>
+      </div>
+      <div class="block">
+        <h4>Contribution</h4>
+        <p>Developed interactive prototypes, coordinated change requests and ensured structured communication during SAL reviews.</p>
+      </div>
+    </div>
+
+    <div class="impact-box">
+      <h4>Impact</h4>
+      <ul>
+        <li>Improved tracking transparency</li>
+        <li>Structured change management process</li>
+        <li>Smooth production release and deployment</li>
+      </ul>
+    </div>
+  </div>
+</div>
+      
+        <!-- Use Case 6-->
+  
+<div class="usecase-card">
+  <div class="usecase-header">
+    <h3>B2C Client Area Application Development</h3>
     <div class="tags">
       <span>Angular</span>
       <span>Ionic</span>
-      <span>UI/UX Design</span>
+      <span>UI Governance</span>
+      <span>International Coordination</span>
     </div>
   </div>
 
   <div class="usecase-grid">
     <div class="usecase-content">
       <div class="block">
-        <h4>Problem</h4>
-        <p>Need for responsive and user-friendly mobile applications to manage client accounts and services.</p>
+        <h4>Context</h4>
+        <p>Development of a hybrid B2C skeleton application supporting customer self-service areas across multiple countries.</p>
       </div>
       <div class="block">
-        <h4>Approach</h4>
-        <p>Development with Angular/Ionic, creation of custom UI libraries, iterative prototyping, and cross-country knowledge transfer.</p>
+        <h4>My Role</h4>
+        <p>Contributed to front-end development, UI library governance and international knowledge transfer sessions.</p>
       </div>
       <div class="block">
-        <h4>Solution</h4>
-        <p>Delivery of hybrid mobile applications compatible with iOS, Android, and web, using Storybook for component testing and InVision for prototyping.</p>
+        <h4>Contribution</h4>
+        <p>Supported cross-platform deployment (iOS, Android, Web) and coordinated feature releases through structured milestone tracking.</p>
       </div>
     </div>
 
     <div class="impact-box">
       <h4>Impact</h4>
       <ul>
-        <li>Improved user experience and engagement</li>
-        <li>Cross-platform accessibility</li>
-        <li>Faster onboarding of new features</li>
+        <li>Improved user experience consistency</li>
+        <li>Cross-country UI standardization</li>
+        <li>Reduced time-to-market for new features</li>
       </ul>
     </div>
   </div>
 </div>
-
-<!-- Use Case 7 -->
-<div class="usecase-card">
-  <div class="usecase-header">
-    <h3>Vehicle & Goods Tracking System</h3>
-    <div class="tags">
-      <span>Figma</span>
-      <span>Agile</span>
-      <span>Prototyping</span>
-    </div>
-  </div>
-
-  <div class="usecase-grid">
-    <div class="usecase-content">
-      <div class="block">
-        <h4>Problem</h4>
-        <p>Lack of visibility and monitoring tools for B2B clients tracking vehicles and shipments.</p>
-      </div>
-      <div class="block">
-        <h4>Approach</h4>
-        <p>Elicitation of requirements, interactive prototyping in Figma, stakeholder validation, and iterative feedback cycles with mobile and backend teams.</p>
-      </div>
-      <div class="block">
-        <h4>Solution</h4>
-        <p>Deployment of a mobile tracking system with improved UX/UI, real-time monitoring, and integration with existing logistics infrastructure.</p>
-      </div>
-    </div>
-
-    <div class="impact-box">
-      <h4>Impact</h4>
-      <ul>
-        <li>Real-time shipment tracking</li>
-        <li>Reduced delays and errors</li>
-        <li>Enhanced B2B client satisfaction</li>
-      </ul>
-    </div>
-  </div>
-</div>
-        <div class="usecase-card">
-          <div class="usecase-header">
-            <h3>Finance Process Automation</h3>
-            <div class="tags">
-              <span>ServiceNow</span>
-              <span>Automation</span>
-              <span>Process Optimization</span>
-            </div>
-          </div>
-
-          <div class="usecase-grid">
-            <div class="usecase-content">
-              <div class="block">
-                <h4>Problem</h4>
-                <p>Manual reconciliation processes causing reporting delays and data inconsistencies across departments.</p>
-              </div>
-              <div class="block">
-                <h4>Approach</h4>
-                <p>Stakeholder workshops, process mapping, gap analysis and feasibility assessment for automation.</p>
-              </div>
-              <div class="block">
-                <h4>Solution</h4>
-                <p>Implementation of automated workflows integrated with ServiceNow and structured validation checkpoints.</p>
-              </div>
-            </div>
-
-            <div class="impact-box">
-              <h4>Impact</h4>
-              <ul>
-                <li>-35% processing time</li>
-                <li>Improved reporting accuracy</li>
-                <li>Reduced manual errors</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
       </div>
     </section>
   </main>
